display spinner on submit + refresh category